tests/fixtures/invalid/max_dict_float.py
# Cannot call max() with Dict[str, int], Float
x = max({"a": 1}, 1.0)
